--- a/css/style.css
+++ b/css/style.css
@@ -12,38 +12,21 @@
     --bs-surface:#EFEEE2;
     --bs-icon-color: black;
 
-    /* Buttons and links */
-    --bs-primary: #C4E538;     /* Yellow-green */
-    --bs-primary-hover: #9bc03f;
-    --bs-on-primary:#283500;
+   
 
-    /* Primary Opacity Variants */
-  --bs-primary-4p: rgba(177, 213, 75, 0.04);
-  --bs-primary-8p: rgba(177, 213, 75, 0.08);
-  --bs-primary-12p: rgba(177, 213, 75, 0.12);
-  --bs-primary-16p: rgba(177, 213, 75, 0.16);
-
-    --bs-secondary: #FF6456;   /* Yellow-orange */
-    --bs-secondary-hover: #e5564c;
-
+  --bs-primary: #E74C3C;
+    --bs-primary-hover: #C0392B;
+    --bs-on-primary:#faf2ea;
+    --bs-on-primary-variant:#3B0906;
     /* Secondary Opacity Variants */
-  --bs-secondary-4p: rgba(255, 100, 86, 0.04);
-  --bs-secondary-8p: rgba(255, 100, 86, 0.08);
-  --bs-secondary-12p: rgba(255, 100, 86, 0.12);
-  --bs-secondary-16p: rgba(255, 100, 86, 0.16);
+    --bs-primary-4p: rgba(231, 76, 60, 0.04);
+    --bs-primary-8p: rgba(231, 76, 60, 0.08);
+    --bs-primary-12p: rgba(231, 76, 60, 0.12);
+    --bs-primary-16p: rgba(231, 76, 60, 0.16);
 
 
-    --bs-tertiary: #F49C20;    /* Red-orange */
-    --bs-tertiary-hover: #e08b1d;
-  
-  /* Tertiary Opacity Variants */
-  --bs-tertiary-4p: rgba(244, 156, 32, 0.04);
-  --bs-tertiary-8p: rgba(244, 156, 32, 0.08);
-  --bs-tertiary-12p: rgba(244, 156, 32, 0.12);
-  --bs-tertiary-16p: rgba(244, 156, 32, 0.16);
-
-  --bs-grid-color:rgba(244, 156, 32, 0.10);
-    
+    --bs-primary-container: #FF897C;
+    --bs-primary-on-container: #2D0001;
   }
 
   /* Dark Theme Overrides */
@@ -57,34 +40,23 @@
 
 
     /* Buttons and links */
-    --bs-primary: #9FCB3A;
-    --bs-primary-hover: #86B832;
-    --bs-on-primary:#9FCB3A;
+     /* Buttons and links */
+     --bs-primary: #C4E538;     /* Yellow-green */
+     --bs-primary-hover: #9bc03f;
+     --bs-on-primary:#283500;
+     --bs-on-primary-variant:#283500;
+ 
+     /* Primary Opacity Variants */
+   --bs-primary-4p: rgba(177, 213, 75, 0.04);
+   --bs-primary-8p: rgba(177, 213, 75, 0.08);
+   --bs-primary-12p: rgba(177, 213, 75, 0.12);
+   --bs-primary-16p: rgba(177, 213, 75, 0.16);
 
     --bs-icon-color: white;
-     /* Primary Opacity Variants */
-    --bs-primary-4p: rgba(159, 203, 58, 0.04);
-    --bs-primary-8p: rgba(159, 203, 58, 0.08);
-    --bs-primary-12p: rgba(159, 203, 58, 0.12);
-    --bs-primary-16p: rgba(159, 203, 58, 0.16);
-
-    --bs-secondary: #E74C3C;
-    --bs-secondary-hover: #C0392B;
-    /* Secondary Opacity Variants */
-    --bs-secondary-4p: rgba(231, 76, 60, 0.04);
-    --bs-secondary-8p: rgba(231, 76, 60, 0.08);
-    --bs-secondary-12p: rgba(231, 76, 60, 0.12);
-    --bs-secondary-16p: rgba(231, 76, 60, 0.16);
-
-    --bs-tertiary: #D17D0D;
-    --bs-tertiary-hover: #B56900;
-  /* Tertiary Opacity Variants */
-  --bs-tertiary-4p: rgba(209, 125, 13, 0.04);
-  --bs-tertiary-8p: rgba(209, 125, 13, 0.08);
-  --bs-tertiary-12p: rgba(209, 125, 13, 0.12);
-  --bs-tertiary-16p: rgba(209, 125, 13, 0.16);
-  
   --bs-grid-color:rgba(159, 203, 58, 0.06);
+
+  --bs-primary-container: #D6EB9B;
+    --bs-primary-on-container: #283500;
    
   }
   
@@ -104,7 +76,7 @@
   .btn-primary {
     --bs-btn-bg: var(--bs-primary);
     --bs-btn-border-color: var(--bs-primary);
-    --bs-btn-color: #283500;
+    --bs-btn-color: var(--bs-on-primary);
     --bs-btn-hover-bg: var(--bs-primary-hover);
     --bs-btn-hover-border-color: var(--bs-primary-hover);
     --bs-btn-font-weight: 600;
@@ -116,30 +88,10 @@
     border-color: var(--bs-primary-hover) !important;
   }
   }
-  
-  .btn-secondary {
-    --bs-btn-bg: var(--bs-secondary);
-    --bs-btn-border-color: var(--bs-secondary);
-    --bs-btn-color: #fff;
-    --bs-btn-hover-bg: var(--bs-secondary-hover);
-    --bs-btn-hover-border-color: var(--bs-secondary-hover);
-    --bs-btn-font-weight: 600;
-    --bs-btn-border-radius: 0.25rem;
-  }
-  
-  .btn-tertiary {
-    --bs-btn-bg: var(--bs-tertiary);
-    --bs-btn-border-color: var(--bs-tertiary);
-    --bs-btn-color: #fff;
-    --bs-btn-hover-bg: var(--bs-tertiary-hover);
-    --bs-btn-hover-border-color: var(--bs-tertiary-hover);
-    --bs-btn-font-weight: 600;
-    --bs-btn-border-radius: 0.25rem;
-  }
-  
+    
   /* Primary Outline */
 .btn-outline-primary {
-  color: var(--bs-on-primary) !important;
+  color: var(--bs-primary) !important;
   border-color: var(--bs-primary) !important;
   font-weight: 500;
   --bs-btn-border-radius: 0.25rem;
@@ -153,37 +105,9 @@
   }
 }
 
-/* Secondary Outline */
-.btn-outline-secondary {
-  color: var(--bs-secondary);
-  border-color: var(--bs-secondary);
-  font-weight: 500;
-  --bs-btn-border-radius: 0.25rem;
-  background-color: var(--bs-secondary-12p);
 
-  &:hover,
-  &:focus,&:active,&:focus-visible {
-    background-color: var(--bs-secondary-16p) !important;
-    color: var(--bs-secondary) !important;
-    border-color: var(--bs-secondary-hover) !important;
-  }
-}
 
-/* Tertiary Outline */
-.btn-outline-tertiary {
-  color: var(--bs-tertiary);
-  border-color: var(--bs-tertiary);
-  font-weight: 500;
-  --bs-btn-border-radius: 0.25rem;
-  background-color: var(--bs-tertiary-12p);
 
-  &:hover,
-  &:focus,&:active,&:focus-visible {
-    background-color: var(--bs-tertiary-8p) !important;
-    color: var(--bs-tertiary) !important;
-    border-color: var(--bs-tertiary-hover) !important;
-  }
-}
 
 .btn{
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -268,34 +192,138 @@
     position: relative;
   }
 
-  .scrolled .container-fluid span.rect::after,.scrolled .container-fluid span.rect::before{
+  .rects{
+    position: relative;
+  }
+  .scrolled .container-fluid span.rect::before,
+  .scrolled .container-fluid span.rect::after,
+  .rects span.rect::before,
+  .rects span.rect::after
+  {
     content: "";
     display: block;
     position: absolute;
     background: var(--bs-primary);
     transition: background-color 0.8s ease, width 0.8s ease, height 0.8s ease, top 0.8s ease, left 0.8s ease, right 0.8s ease, bottom 0.8s ease;
   }
-.scrolled .container-fluid span.rect::before {
+.scrolled .container-fluid span.rect::before, span.rect::before {
     width: 10px;
     height: 1px;
 }
-.scrolled .container-fluid span.rect::after {
+.scrolled .container-fluid span.rect::after, span.rect::after {
     height: 10px;
     width: 1px;
 }
-span.rect.tr::before,span.rect.tr::after{
-    top: -1px;
-    right: -1px;
+span.rect.tr::before,
+span.rect.tr::after{
+    top: 0;
+    right: 0;
 }
 span.rect.tl::before,span.rect.tl::after{
+    top: 0;
+    left: 0;
+}
+span.rect.br::before,span.rect.br::after{
+    bottom: 0;
+    right: 0;
+}
+span.rect.bl::before,span.rect.bl::after{
+    bottom: 0;
+    left: 0;
+}
+
+.projects span.rect.tr::before,
+.projects span.rect.tr::after{
+    top: -1px;
+    right: -1px;
+}
+.projects span.rect.tl::before,.projects span.rect.tl::after{
     top: -1px;
     left: -1px;
 }
-span.rect.br::before,span.rect.br::after{
+.projects span.rect.br::before,.projects span.rect.br::after{
     bottom: -1px;
     right: -1px;
 }
-span.rect.bl::before,span.rect.bl::after{
+.projects span.rect.bl::before,.projects span.rect.bl::after{
     bottom: -1px;
     left: -1px;
 }
+
+
+
+.blocks {
+    height: 100%; /* assumes parent has fixed height or uses flex to stretch */
+    @media (max-width: 992px) {
+            display:none !important;
+    }
+  }
+  
+  .block {
+    width: 50%;       /* 2 blocks per row */
+    aspect-ratio: 4/2.6; /* makes each block square – auto height */
+    border: 1px solid var(--bs-primary-8p);  /* optional for grid lines */
+  }
+  .hblock{
+    width: 8.33%;
+    aspect-ratio: 1/1;
+    border: 1px solid var(--bs-primary-8p);
+  }
+  .bold{
+    font-weight: 600 !important;
+  }
+  .projects-section{
+    padding-top:34px !important;
+    padding-bottom:33px !important;
+  }
+  .projects>div,.certificate,.resume section{
+    border: 1px solid var(--bs-primary-8p);
+}
+.resume section{
+    padding:1.5rem;
+    & h3{
+        margin-bottom:1rem;
+    }
+}
+
+.btn.btn-link {
+    --bs-btn-color: var(--bs-primary);
+    --bs-btn-hover-color: var(--bs-primary-hover);
+    --bs-btn-font-weight: 500;
+    --bs-btn-border-radius: 0.25rem;
+    text-decoration: none;
+    font-weight: 500;
+    color: var(--bs-primary);
+    transition: color 0.3s ease;
+
+    &:hover,
+    &:focus,&:active,&:focus-visible {
+      color: var(--bs-primary-hover) !important;
+      text-decoration: underline;
+    }
+  }
+  .skills-card{
+    border: 1px solid var(--bs-primary-8p);
+    padding:2rem;
+    & h4{
+        margin-bottom:2rem;
+    }
+  }
+  
+  .bg-primary{
+    background-color: var(--bs-primary-container) !important;
+    color: var(--bs-primary-on-container) !important;
+    & a{
+        color: var(--bs-primary-on-container) !important;
+        font-weight:600;
+        text-decoration: underline;
+    }
+  }
+  .text-primary{
+    color: var(--bs-primary) !important;
+  }
+  a{
+    text-decoration: none;
+    color:var(--bs-primary);
+  }
+  
