--- a/css/style.css
+++ b/css/style.css
@@ -353,3 +353,6 @@ span.rect.bl::before,span.rect.bl::after{
 .border-box {
     border:1px solid var(--bs-primary-8p);
 }
+.certificate img{
+    border-radius:24px;
+}
